@@ -110,6 +110,7 @@ Supported Presently
 Changelog for 1.3.40
 * Updated nginx configuration (Pongracz I)
 * GL account search now will search within descriptions for matches (Chris T)
+* Fixed #1139 (Vendor can show up as default customer in sales order, confusing...) (Pongracz I)
 
 Changelog for 1.3.39
 * Fixed Internal Server Error clicking through ar/ap report (Chris T, 1022)
